# modern-python

./: .gitignore  .readthedocs.yml  LICENSE  noxfile.py  pyproject.toml
docs/: CICD.md  LICENSE.md  conf.py  documentation.md  getting_started.md  index.md  linting.md  testing.md  typing.md
docs/apidocs/: index.rst
docs/apidocs/modern_python/: modern_python.console.md  modern_python.md  modern_python.wikipedia.md
src/modern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
