[project]
name = "modern-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gilgamesh", email = "18860289355@163.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "importlib-metadata>=8.7.0",
    "mkdocs==1.4.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sphinx-autodoc2>=0.5.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.10.6",
    "myst-parser>=4.0.1",
    "nox>=2025.5.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "typeguard>=4.4.4",
    "xdoctest>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
per-file-ignores = { "tests/*" = ["S101","ANN","D"] }
select = ["ANN","B","B9","C","E","F","I","S","W","D","DOC"]
ignore = ["E203","E501"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
